# tdp-QrCode

./: .gitignore  .packagefolder  .touchdesigner-version  Project.toe  README.md  pyproject.toml
AppData/: readme.md
AppData/Scripts/: sys.py
UserData/: readme.md
src/QrCodeCOMP/: TdQrcode.tox
src/TdQrCode/: __init__.py
src/TdQrcode/: TdQrcode.tox  __init__.py  extTdQrCode.py
src/tdpQrCodeCOMP/: __init__.py  extTdQrCode.py
