[project]
name = "td-uvmanagedprefab"
version = "0.0.1"
description = "A prefab for TouchDesigner-Projects that will be complelty managed and run by UV."
readme = "README.md"
keywords=["TouchDesigner"]
authors = []                    # Required for PyPi-Publishing
license-files = ["LICENSE"]     # Do not forgot to adjust ;)
requires-python = ">=3.11"
dependencies = [
    "tdp-touchutilcollection>=0.4.0",
]

[tool.uv]
environments = [
    "sys_platform =='win32'",
    "sys_platform =='darwin'"
]

## Dev Dependencies.
[dependency-groups]
dev = [
    "monkeybrain>=0.2.3",
]

## TouchLaucnh Settings
[tool.touchdesigner]
projectfile = "Project.toe"     # Adjust if you rename the base project.
enforce-version="closest-build" # Options: strict, closest-build, latest-build, latest-version

## Package Requirements
# Uncomment for Package-Development!

# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["src"] # Or any folder where the packeg-structure resides on.

# [tool.setuptools.package-data]
# "*" = ["*.tox"] # Otherwise binary tox-files will be ignored.